<resources>
    <string name="app_name">ROS Joystick Controller</string>
    <string name="action_settings">UI Settings</string>
    <string name="myversion">1.0</string>

    <!--navigation drawer-->
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="github">Example Code</string>
    <string name="Controller">Select Controller</string>
    <string name="ros_settings">ROS Settings</string>
    <string name="more_info">Instructions/About</string>
    <string name="recongizeAuthor">By: Stephan Schindewolf</string>
    <string name="gamePad">Logitech 710</string>
    <string name="phonePad">Phone</string>
    <string name="terminal">Terminal</string>
    <string name="default_ros_master_uri">10.0.1.128</string>
    <string name="enter_ros_master_uri">ROS Master IP Address</string>
    <string name="github_link">https://github.com/mtbsteve</string>
    <string name="IP_explain">Enter IP address of the ROSbridge master. For companion computers running apsync, 10.0.1.128 is the default. </string>
    <string name="port">Port number</string>
    <string name="default_port">9090</string>
    <string name="port_explain">Port number for the websocket communication to the ROSbridge master. Default is 9090. Any changes need to be adopted it in the rosbridge launch file as well.</string>


    <string name="AboutMessage">
        <b>About:</b>\
        <p>ROS Controller is an open-source Controller App that allows you to use an Logitech/Xbox or any controller that works with your phone to send output to the ROS node /cmd_vel or /joy. This app has been tested with a Logitech 710 controller, connected via an USB Wifi dongle.\n\n</p>
        <b>Instructions:</b>\
        1. Connect your joystick to the USB port of your Android device and turn the Joystick on.\
        2. Go to Select Controller, select the Logitech 710 icon. Moving the joystick controls should be reflected in the on screen graphics.\
        3. Open ROS Settings and set your ROS_IP pointing to the IP of the computer running the ROS master and press connect.\
        4. On the ROS Master computer, open a terminal window, start roscore, and rosbridge. Run rostopic echo /cmd_vel\ or rostopic echo /joy. \
        5. The stick movements for linear x,y,z and angular x,y,z should be shown in the terminal window. On the /joy node, also the buttons are listed.\n\

        Click on the Cat icon below if you want to find latest updates or submit an issue.\n\
        <b>Credits:</b>\
        <p>This project is based on the work from Nathan Ramanathan (https://github.com/nathanRamaNoodles/Tinker-Controller) and the ROS.org team (http://wiki.ros.org/android)</p>
    </string>

    <string name="ros_button_text">Set IP Address</string>
    <string name="ros_button_text2">Set Port</string>


</resources>
