<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/game_controller"
            android:icon="@drawable/ic_controller"
            android:title="@string/Controller" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/ros_settings"
            android:icon="@drawable/ros_icon"
            android:title="@string/ros_settings" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/more_info" />
    </group>
</menu>