<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="?actionBarTheme"
        app:title="@string/ros_settings" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="154dp"
        android:layout_height="20dp"
        android:layout_marginStart="60dp"
        android:text="@string/enter_ros_master_uri"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button1"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/rosuri"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textUri"
        android:text="@string/default_ros_master_uri"
        android:textAlignment="viewEnd"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/button1" />

    <Button
        android:id="@+id/button1"
        style="@style/Cyanea.ColoredButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="60dp"
        android:text="@string/ros_button_text"
        android:visibility="visible"
        app:backgroundTint="@color/cyanea_accent_dark_reference"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="212dp"
        android:layout_height="36dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/IP_explain"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="155dp"
        android:layout_height="18dp"
        android:layout_marginStart="60dp"
        android:text="@string/port"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="219dp"
        android:layout_height="56dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/port_explain"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="55dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/default_port"
        android:textAlignment="viewEnd"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/rosuri" />

    <Button
        android:id="@+id/button"
        style="@style/Cyanea.ColoredButton"
        android:layout_width="137dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:text="@string/ros_button_text2"
        app:backgroundTint="@color/cyanea_accent_dark_reference"
        app:layout_constraintStart_toStartOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

</androidx.constraintlayout.widget.ConstraintLayout>